--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -191,8 +191,8 @@
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="796"/>
-        <CursorPos Y="815"/>
+        <TopLine Value="808"/>
+        <CursorPos X="78" Y="838"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -233,8 +233,8 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="10"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="108"/>
-        <CursorPos Y="128"/>
+        <TopLine Value="13"/>
+        <CursorPos X="47" Y="48"/>
         <UsageCount Value="201"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -423,124 +423,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="114" TopLine="94"/>
-      </Position1>
-      <Position2>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="115" TopLine="94"/>
-      </Position2>
-      <Position3>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="125" TopLine="102"/>
-      </Position3>
-      <Position4>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="126" TopLine="102"/>
-      </Position4>
-      <Position5>
         <Filename Value="rtfedit.pas"/>
         <Caret Line="136" TopLine="117"/>
-      </Position5>
-      <Position6>
+      </Position1>
+      <Position2>
         <Filename Value="rtfedit.pas"/>
         <Caret Line="137" TopLine="117"/>
-      </Position6>
-      <Position7>
+      </Position2>
+      <Position3>
         <Filename Value="rtfedit.pas"/>
         <Caret Line="112" TopLine="93"/>
-      </Position7>
-      <Position8>
+      </Position3>
+      <Position4>
         <Filename Value="rtfedit.pas"/>
         <Caret Line="138" TopLine="119"/>
+      </Position4>
+      <Position5>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="127" TopLine="110"/>
+      </Position5>
+      <Position6>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="128" TopLine="110"/>
+      </Position6>
+      <Position7>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="129" TopLine="110"/>
+      </Position7>
+      <Position8>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="131" TopLine="110"/>
       </Position8>
       <Position9>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="127" TopLine="110"/>
+        <Caret Line="137" TopLine="110"/>
       </Position9>
       <Position10>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="128" TopLine="110"/>
+        <Caret Line="139" TopLine="110"/>
       </Position10>
       <Position11>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="129" TopLine="110"/>
+        <Caret Line="145" TopLine="113"/>
       </Position11>
       <Position12>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="131" TopLine="110"/>
+        <Caret Line="147" TopLine="115"/>
       </Position12>
       <Position13>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="137" TopLine="110"/>
+        <Caret Line="115" TopLine="92"/>
       </Position13>
       <Position14>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="139" TopLine="110"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="347" TopLine="328"/>
       </Position14>
       <Position15>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="145" TopLine="113"/>
+        <Caret Line="128" TopLine="96"/>
       </Position15>
       <Position16>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="147" TopLine="115"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="824" TopLine="801"/>
       </Position16>
       <Position17>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="115" TopLine="92"/>
+        <Caret Line="128" Column="5" TopLine="96"/>
       </Position17>
       <Position18>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="347" TopLine="328"/>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="108" TopLine="96"/>
       </Position18>
       <Position19>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="128" TopLine="96"/>
+        <Caret Line="112" Column="15" TopLine="97"/>
       </Position19>
       <Position20>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="824" TopLine="801"/>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="115" TopLine="87"/>
       </Position20>
       <Position21>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="128" Column="5" TopLine="96"/>
+        <Caret Line="163" Column="3" TopLine="134"/>
       </Position21>
       <Position22>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="108" TopLine="96"/>
-      </Position22>
-      <Position23>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="112" Column="15" TopLine="97"/>
-      </Position23>
-      <Position24>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="115" TopLine="87"/>
-      </Position24>
-      <Position25>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="163" Column="3" TopLine="134"/>
-      </Position25>
-      <Position26>
         <Filename Value="projeto.pas"/>
         <Caret Line="818" Column="43" TopLine="801"/>
-      </Position26>
-      <Position27>
+      </Position22>
+      <Position23>
         <Filename Value="projeto.pas"/>
         <Caret Line="561" TopLine="541"/>
-      </Position27>
-      <Position28>
+      </Position23>
+      <Position24>
         <Filename Value="projeto.pas"/>
         <Caret Line="562" TopLine="541"/>
-      </Position28>
-      <Position29>
+      </Position24>
+      <Position25>
         <Filename Value="projeto.pas"/>
         <Caret Line="564" TopLine="541"/>
-      </Position29>
-      <Position30>
+      </Position25>
+      <Position26>
         <Filename Value="formpopup.pas"/>
         <Caret Line="128" TopLine="108"/>
+      </Position26>
+      <Position27>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="153" TopLine="141"/>
+      </Position27>
+      <Position28>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="41" TopLine="22"/>
+      </Position28>
+      <Position29>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="178" TopLine="140"/>
+      </Position29>
+      <Position30>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="831" TopLine="804"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -583,14 +583,14 @@
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="projeto.pas"/>
-        <Line Value="1518"/>
+        <Line Value="1537"/>
       </Item2>
       <Item3>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="projeto.pas"/>
-        <Line Value="1449"/>
+        <Line Value="1468"/>
       </Item3>
     </BreakPoints>
     <Watches Count="1">
