--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -162,9 +162,10 @@
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="8"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="328"/>
+        <TopLine Value="341"/>
         <CursorPos Y="347"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
@@ -182,17 +183,16 @@
         <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <CursorPos X="18"/>
-        <UsageCount Value="184"/>
+        <UsageCount Value="182"/>
       </Unit3>
       <Unit4>
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="808"/>
-        <CursorPos X="78" Y="838"/>
+        <TopLine Value="786"/>
+        <CursorPos Y="805"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -233,8 +233,8 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="10"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="13"/>
-        <CursorPos X="47" Y="48"/>
+        <TopLine Value="133"/>
+        <CursorPos Y="165"/>
         <UsageCount Value="201"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -246,7 +246,7 @@
         <EditorIndex Value="16"/>
         <WindowIndex Value="1"/>
         <TopLine Value="119"/>
-        <CursorPos Y="138"/>
+        <CursorPos Y="139"/>
         <UsageCount Value="201"/>
         <Loaded Value="True"/>
       </Unit8>
@@ -281,7 +281,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="25"/>
         <CursorPos X="51" Y="45"/>
-        <UsageCount Value="57"/>
+        <UsageCount Value="55"/>
       </Unit11>
       <Unit12>
         <Filename Value="PCRE.pas"/>
@@ -335,7 +335,7 @@
         <Filename Value="C:\lazarus\fpc\2.6.2\source\rtl\objpas\strutils.pp"/>
         <TopLine Value="203"/>
         <CursorPos Y="14"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="10"/>
       </Unit16>
       <Unit17>
         <Filename Value="formverserules.pas"/>
@@ -345,10 +345,11 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="17"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="71"/>
-        <CursorPos X="5" Y="100"/>
+        <TopLine Value="69"/>
+        <CursorPos X="3" Y="71"/>
         <UsageCount Value="228"/>
         <Loaded Value="True"/>
+        <LoadedDesigner Value="True"/>
       </Unit17>
       <Unit18>
         <Filename Value="twAutomate.pas"/>
@@ -378,7 +379,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="93"/>
         <CursorPos X="23" Y="122"/>
-        <UsageCount Value="98"/>
+        <UsageCount Value="96"/>
       </Unit20>
       <Unit21>
         <Filename Value="onttokenizer.pas"/>
@@ -396,8 +397,8 @@
         <UnitName Value="ONTParser"/>
         <EditorIndex Value="7"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="226"/>
-        <CursorPos Y="247"/>
+        <TopLine Value="227"/>
+        <CursorPos X="61" Y="246"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit22>
@@ -418,129 +419,129 @@
         <WindowIndex Value="1"/>
         <TopLine Value="461"/>
         <CursorPos Y="480"/>
-        <UsageCount Value="13"/>
+        <UsageCount Value="11"/>
       </Unit24>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="rtfedit.pas"/>
-        <Caret Line="136" TopLine="117"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="838" TopLine="809"/>
       </Position1>
       <Position2>
-        <Filename Value="rtfedit.pas"/>
-        <Caret Line="137" TopLine="117"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="840" TopLine="809"/>
       </Position2>
       <Position3>
-        <Filename Value="rtfedit.pas"/>
-        <Caret Line="112" TopLine="93"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="841" TopLine="810"/>
       </Position3>
       <Position4>
-        <Filename Value="rtfedit.pas"/>
-        <Caret Line="138" TopLine="119"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="842" TopLine="811"/>
       </Position4>
       <Position5>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="127" TopLine="110"/>
+        <Caret Line="134" TopLine="104"/>
       </Position5>
       <Position6>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="128" TopLine="110"/>
+        <Caret Line="135" TopLine="104"/>
       </Position6>
       <Position7>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="129" TopLine="110"/>
+        <Caret Line="137" TopLine="105"/>
       </Position7>
       <Position8>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="131" TopLine="110"/>
+        <Caret Line="138" TopLine="106"/>
       </Position8>
       <Position9>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="137" TopLine="110"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="136" TopLine="119"/>
       </Position9>
       <Position10>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="139" TopLine="110"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="137" TopLine="119"/>
       </Position10>
       <Position11>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="145" TopLine="113"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="138" TopLine="119"/>
       </Position11>
       <Position12>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="147" TopLine="115"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="139" TopLine="119"/>
       </Position12>
       <Position13>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="115" TopLine="92"/>
+        <Caret Line="139" TopLine="107"/>
       </Position13>
       <Position14>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="347" TopLine="328"/>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="141" TopLine="109"/>
       </Position14>
       <Position15>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="128" TopLine="96"/>
+        <Caret Line="148" TopLine="129"/>
       </Position15>
       <Position16>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="824" TopLine="801"/>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="150" TopLine="129"/>
       </Position16>
       <Position17>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="128" Column="5" TopLine="96"/>
+        <Caret Line="151" TopLine="129"/>
       </Position17>
       <Position18>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="108" TopLine="96"/>
+        <Caret Line="156" TopLine="129"/>
       </Position18>
       <Position19>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="112" Column="15" TopLine="97"/>
+        <Caret Line="158" TopLine="129"/>
       </Position19>
       <Position20>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="115" TopLine="87"/>
+        <Caret Line="159" TopLine="129"/>
       </Position20>
       <Position21>
         <Filename Value="formpopup.pas"/>
-        <Caret Line="163" Column="3" TopLine="134"/>
+        <Caret Line="164" TopLine="132"/>
       </Position21>
       <Position22>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="818" Column="43" TopLine="801"/>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="165" TopLine="133"/>
       </Position22>
       <Position23>
         <Filename Value="projeto.pas"/>
-        <Caret Line="561" TopLine="541"/>
+        <Caret Line="844" TopLine="813"/>
       </Position23>
       <Position24>
         <Filename Value="projeto.pas"/>
-        <Caret Line="562" TopLine="541"/>
+        <Caret Line="846" TopLine="815"/>
       </Position24>
       <Position25>
         <Filename Value="projeto.pas"/>
-        <Caret Line="564" TopLine="541"/>
+        <Caret Line="122" Column="15" TopLine="105"/>
       </Position25>
       <Position26>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="128" TopLine="108"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="730" TopLine="728"/>
       </Position26>
       <Position27>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="153" TopLine="141"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="805" TopLine="786"/>
       </Position27>
       <Position28>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="41" TopLine="22"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="730" TopLine="711"/>
       </Position28>
       <Position29>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="178" TopLine="140"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="805" TopLine="786"/>
       </Position29>
       <Position30>
         <Filename Value="projeto.pas"/>
-        <Caret Line="831" TopLine="804"/>
+        <Caret Line="730" TopLine="711"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
