--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -122,6 +122,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
+        <CommandLineParams Value="--debug-log=log.txt"/>
         <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
@@ -139,6 +140,7 @@
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
         <WindowIndex Value="1"/>
+        <TopLine Value="20"/>
         <CursorPos Y="26"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
@@ -152,8 +154,8 @@
         <UnitName Value="formPrincipal"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="246"/>
-        <CursorPos Y="265"/>
+        <TopLine Value="267"/>
+        <CursorPos Y="286"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -165,8 +167,8 @@
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="8"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="341"/>
-        <CursorPos Y="347"/>
+        <TopLine Value="744"/>
+        <CursorPos Y="765"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -183,7 +185,7 @@
         <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <CursorPos X="18"/>
-        <UsageCount Value="182"/>
+        <UsageCount Value="169"/>
       </Unit3>
       <Unit4>
         <Filename Value="projeto.pas"/>
@@ -191,8 +193,8 @@
         <UnitName Value="Projeto"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="786"/>
-        <CursorPos Y="805"/>
+        <TopLine Value="358"/>
+        <CursorPos Y="377"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -205,9 +207,10 @@
         <Filename Value="sugestao.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sugestao"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="14"/>
         <WindowIndex Value="1"/>
-        <CursorPos X="51" Y="9"/>
+        <TopLine Value="561"/>
+        <CursorPos X="24" Y="573"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit5>
@@ -217,7 +220,7 @@
         <ComponentName Value="FormNovoProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="12"/>
         <WindowIndex Value="1"/>
         <TopLine Value="5"/>
         <CursorPos Y="40"/>
@@ -231,7 +234,7 @@
         <ComponentName Value="frmDictionaryPopup"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="11"/>
         <WindowIndex Value="1"/>
         <TopLine Value="133"/>
         <CursorPos Y="165"/>
@@ -243,7 +246,7 @@
         <Filename Value="rtfedit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="RTFEdit"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="17"/>
         <WindowIndex Value="1"/>
         <TopLine Value="119"/>
         <CursorPos Y="139"/>
@@ -256,7 +259,7 @@
         <ComponentName Value="FormPropProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="16"/>
         <WindowIndex Value="1"/>
         <TopLine Value="46"/>
         <CursorPos X="3" Y="60"/>
@@ -268,7 +271,7 @@
         <Filename Value="memoversiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="MemoVersiculo"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="15"/>
         <WindowIndex Value="1"/>
         <TopLine Value="7"/>
         <CursorPos X="38" Y="39"/>
@@ -281,7 +284,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="25"/>
         <CursorPos X="51" Y="45"/>
-        <UsageCount Value="55"/>
+        <UsageCount Value="42"/>
       </Unit11>
       <Unit12>
         <Filename Value="PCRE.pas"/>
@@ -299,7 +302,7 @@
         <ComponentName Value="frmExportarProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="18"/>
+        <EditorIndex Value="19"/>
         <WindowIndex Value="1"/>
         <TopLine Value="77"/>
         <CursorPos X="10" Y="102"/>
@@ -311,7 +314,7 @@
         <Filename Value="exportarprojeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ExportarProjeto"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="13"/>
         <WindowIndex Value="1"/>
         <TopLine Value="363"/>
         <CursorPos Y="399"/>
@@ -324,7 +327,7 @@
         <ComponentName Value="FrmMesclarProjetos"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="19"/>
+        <EditorIndex Value="20"/>
         <WindowIndex Value="1"/>
         <CursorPos X="21" Y="30"/>
         <UsageCount Value="213"/>
@@ -332,26 +335,19 @@
         <LoadedDesigner Value="True"/>
       </Unit15>
       <Unit16>
-        <Filename Value="C:\lazarus\fpc\2.6.2\source\rtl\objpas\strutils.pp"/>
-        <TopLine Value="203"/>
-        <CursorPos Y="14"/>
-        <UsageCount Value="10"/>
-      </Unit16>
-      <Unit17>
         <Filename Value="formverserules.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="FrmEscolherVerseRules"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="18"/>
         <WindowIndex Value="1"/>
         <TopLine Value="69"/>
         <CursorPos X="3" Y="71"/>
         <UsageCount Value="228"/>
         <Loaded Value="True"/>
-        <LoadedDesigner Value="True"/>
-      </Unit17>
-      <Unit18>
+      </Unit16>
+      <Unit17>
         <Filename Value="twAutomate.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="3"/>
@@ -360,8 +356,8 @@
         <CursorPos X="23" Y="117"/>
         <UsageCount Value="232"/>
         <Loaded Value="True"/>
-      </Unit18>
-      <Unit19>
+      </Unit17>
+      <Unit18>
         <Filename Value="twsyncthread.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="twSyncThread"/>
@@ -371,177 +367,188 @@
         <CursorPos Y="44"/>
         <UsageCount Value="212"/>
         <Loaded Value="True"/>
-      </Unit19>
-      <Unit20>
+      </Unit18>
+      <Unit19>
         <Filename Value="C:\tools\lazarus\components\lazutils\lazutf8.pas"/>
         <UnitName Value="LazUTF8"/>
         <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="93"/>
         <CursorPos X="23" Y="122"/>
-        <UsageCount Value="96"/>
-      </Unit20>
-      <Unit21>
+        <UsageCount Value="82"/>
+      </Unit19>
+      <Unit20>
         <Filename Value="onttokenizer.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTTokenizer"/>
         <EditorIndex Value="6"/>
         <WindowIndex Value="1"/>
-        <CursorPos X="12" Y="17"/>
+        <TopLine Value="204"/>
+        <CursorPos X="3" Y="50"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
-      </Unit21>
-      <Unit22>
+      </Unit20>
+      <Unit21>
         <Filename Value="ontparser.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTParser"/>
         <EditorIndex Value="7"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="227"/>
-        <CursorPos X="61" Y="246"/>
+        <TopLine Value="261"/>
+        <CursorPos Y="249"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
-      </Unit22>
-      <Unit23>
+      </Unit21>
+      <Unit22>
         <Filename Value="sintagma.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sintagma"/>
         <EditorIndex Value="9"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="423"/>
-        <CursorPos X="3" Y="416"/>
+        <TopLine Value="578"/>
+        <CursorPos Y="598"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
-      </Unit23>
-      <Unit24>
-        <Filename Value="C:\tools\lazarus\lcl\include\treeview.inc"/>
+      </Unit22>
+      <Unit23>
+        <Filename Value="C:\tools\lazarus\lcl\lclproc.pas"/>
+        <UnitName Value="LCLProc"/>
         <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="461"/>
-        <CursorPos Y="480"/>
-        <UsageCount Value="11"/>
+        <TopLine Value="1487"/>
+        <CursorPos X="3" Y="1489"/>
+        <UsageCount Value="10"/>
+      </Unit23>
+      <Unit24>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\sysutils\sysstr.inc"/>
+        <EditorIndex Value="10"/>
+        <WindowIndex Value="1"/>
+        <TopLine Value="955"/>
+        <CursorPos X="30" Y="963"/>
+        <UsageCount Value="12"/>
+        <Loaded Value="True"/>
       </Unit24>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="838" TopLine="809"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="763" TopLine="751"/>
       </Position1>
       <Position2>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="840" TopLine="809"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="765" TopLine="751"/>
       </Position2>
       <Position3>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="841" TopLine="810"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="766" TopLine="751"/>
       </Position3>
       <Position4>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="842" TopLine="811"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="980" TopLine="961"/>
       </Position4>
       <Position5>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="134" TopLine="104"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="989" TopLine="961"/>
       </Position5>
       <Position6>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="135" TopLine="104"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="763" TopLine="744"/>
       </Position6>
       <Position7>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="137" TopLine="105"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="765" TopLine="744"/>
       </Position7>
       <Position8>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="138" TopLine="106"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="766" TopLine="744"/>
       </Position8>
       <Position9>
-        <Filename Value="rtfedit.pas"/>
-        <Caret Line="136" TopLine="119"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="980" TopLine="961"/>
       </Position9>
       <Position10>
-        <Filename Value="rtfedit.pas"/>
-        <Caret Line="137" TopLine="119"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="983" TopLine="961"/>
       </Position10>
       <Position11>
-        <Filename Value="rtfedit.pas"/>
-        <Caret Line="138" TopLine="119"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="995" TopLine="973"/>
       </Position11>
       <Position12>
-        <Filename Value="rtfedit.pas"/>
-        <Caret Line="139" TopLine="119"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="996" TopLine="973"/>
       </Position12>
       <Position13>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="139" TopLine="107"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="999" TopLine="981"/>
       </Position13>
       <Position14>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="141" TopLine="109"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="597" TopLine="578"/>
       </Position14>
       <Position15>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="148" TopLine="129"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="598" TopLine="578"/>
       </Position15>
       <Position16>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="150" TopLine="129"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1000" TopLine="981"/>
       </Position16>
       <Position17>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="151" TopLine="129"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1002" TopLine="981"/>
       </Position17>
       <Position18>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="156" TopLine="129"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1019" TopLine="987"/>
       </Position18>
       <Position19>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="158" TopLine="129"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="985" TopLine="966"/>
       </Position19>
       <Position20>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="159" TopLine="129"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="986" TopLine="966"/>
       </Position20>
       <Position21>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="164" TopLine="132"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="985" TopLine="966"/>
       </Position21>
       <Position22>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="165" TopLine="133"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="986" TopLine="966"/>
       </Position22>
       <Position23>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="844" TopLine="813"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="985" TopLine="966"/>
       </Position23>
       <Position24>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="846" TopLine="815"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="986" TopLine="966"/>
       </Position24>
       <Position25>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="122" Column="15" TopLine="105"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="985" TopLine="966"/>
       </Position25>
       <Position26>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="730" TopLine="728"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="986" TopLine="966"/>
       </Position26>
       <Position27>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="805" TopLine="786"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="763" TopLine="744"/>
       </Position27>
       <Position28>
         <Filename Value="projeto.pas"/>
-        <Caret Line="730" TopLine="711"/>
+        <Caret Line="377" TopLine="358"/>
       </Position28>
       <Position29>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="805" TopLine="786"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="765" Column="26" TopLine="744"/>
       </Position29>
       <Position30>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="730" TopLine="711"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1001" Column="45" TopLine="988"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -571,7 +578,7 @@
     </Linking>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="3">
+    <BreakPoints Count="2">
       <Item1>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
@@ -584,15 +591,8 @@
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="projeto.pas"/>
-        <Line Value="1537"/>
+        <Line Value="1553"/>
       </Item2>
-      <Item3>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
-        <Source Value="projeto.pas"/>
-        <Line Value="1468"/>
-      </Item3>
     </BreakPoints>
     <Watches Count="1">
       <Item1>
